--- a/CaritasAPI2/CaritasAPI2/packages.config
+++ b/CaritasAPI2/CaritasAPI2/packages.config
@@ -23,9 +23,12 @@
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.7" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Cors" version="5.2.7" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.HelpPage" version="5.2.4" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.OData" version="5.3.1" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.4" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.4" targetFramework="net461" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.0" targetFramework="net461" />
+  <package id="Microsoft.Data.Edm" version="5.6.0" targetFramework="net461" />
+  <package id="Microsoft.Data.OData" version="5.6.0" targetFramework="net461" />
   <package id="Microsoft.IdentityModel.JsonWebTokens" version="5.3.0" targetFramework="net461" />
   <package id="Microsoft.IdentityModel.Logging" version="5.3.0" targetFramework="net461" />
   <package id="Microsoft.IdentityModel.Protocols" version="5.3.0" targetFramework="net461" />
@@ -43,5 +46,6 @@
   <package id="Owin" version="1.0" targetFramework="net461" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.4.1" targetFramework="net461" />
   <package id="System.IdentityModel.Tokens.Jwt" version="5.3.0" targetFramework="net461" />
+  <package id="System.Spatial" version="5.6.0" targetFramework="net461" />
   <package id="WebGrease" version="1.6.0" targetFramework="net461" />
 </packages>
