--- a/CaritasAPI2/CaritasAPI2/CaritasAPI2.csproj
+++ b/CaritasAPI2/CaritasAPI2/CaritasAPI2.csproj
@@ -253,12 +253,14 @@
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\AccommodationsController.cs" />
     <Compile Include="Controllers\BedsController.cs" />
+    <Compile Include="Controllers\GandNController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\RoomsController.cs" />
     <Compile Include="Controllers\UsersController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Mappers\GandNMapper.cs" />
     <Compile Include="Mappers\UserMapper.cs" />
     <Compile Include="Migrations\201812131038141_initial.cs" />
     <Compile Include="Migrations\201812131038141_initial.Designer.cs">
@@ -276,17 +278,31 @@
     <Compile Include="Migrations\201812201305015_ResidenceModel.Designer.cs">
       <DependentUpon>201812201305015_ResidenceModel.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201901021030286_AddedRelationshipsForAccommodations.cs" />
+    <Compile Include="Migrations\201901021030286_AddedRelationshipsForAccommodations.Designer.cs">
+      <DependentUpon>201901021030286_AddedRelationshipsForAccommodations.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201901021033560_AddedRelationshipsForAccommodations1.cs" />
+    <Compile Include="Migrations\201901021033560_AddedRelationshipsForAccommodations1.Designer.cs">
+      <DependentUpon>201901021033560_AddedRelationshipsForAccommodations1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201901021036182_AddedRelationshipsForAccommodations2.cs" />
+    <Compile Include="Migrations\201901021036182_AddedRelationshipsForAccommodations2.Designer.cs">
+      <DependentUpon>201901021036182_AddedRelationshipsForAccommodations2.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Accommodation.cs" />
     <Compile Include="Models\Bed.cs" />
     <Compile Include="Models\Gender.cs" />
-    <Compile Include="Models\Nationalities.cs" />
+    <Compile Include="Models\Nationality.cs" />
     <Compile Include="Models\ResidenceContext.cs" />
     <Compile Include="Models\Room.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Models\UserContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\GandNService.cs" />
     <Compile Include="Services\UserService.cs" />
+    <Compile Include="SInterfaces\IGandNService.cs" />
     <Compile Include="SInterfaces\IUserService.cs" />
     <Compile Include="Views\GenderView.cs" />
     <Compile Include="Views\NationalityView.cs" />
@@ -392,6 +408,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201812201305015_ResidenceModel.resx">
       <DependentUpon>201812201305015_ResidenceModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201901021030286_AddedRelationshipsForAccommodations.resx">
+      <DependentUpon>201901021030286_AddedRelationshipsForAccommodations.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201901021033560_AddedRelationshipsForAccommodations1.resx">
+      <DependentUpon>201901021033560_AddedRelationshipsForAccommodations1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201901021036182_AddedRelationshipsForAccommodations2.resx">
+      <DependentUpon>201901021036182_AddedRelationshipsForAccommodations2.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
